# budgeter

./: .gitignore  Cargo.toml  README.md
budgeter-core/: Cargo.toml
budgeter-core/src/: app.rs  import.rs  lib.rs  model.rs
budgeter-tui/: Cargo.toml
budgeter-tui/src/: db.rs  main.rs  ui.rs
budgeter-web/: Cargo.toml  Trunk.toml  index.html
budgeter-web/src/: main.rs  ui.rs
src/: app.rs  db.rs  import.rs  main.rs  model.rs  ui.rs
