[package]
name = "budgeter"
version = "0.1.0"
edition = "2024"
authors = ["Gustavo & Ayumi"]
license = "MIT"

[dependencies]
anyhow      = "1"
chrono      = { version = "0.4", features = ["serde"] }
crossterm   = "0.28"
encoding_rs = "0.8"
polars      = { version = "0.53", features = ["lazy", "parquet", "dtype-date", "dtype-datetime", "temporal", "serde"] }
ratatui     = "0.30"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
