[workspace]
members = [
    "budgeter-core",
    "budgeter-tui",
    "budgeter-web",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2024"
authors     = ["Gustavo & Ayumi"]
license     = "MIT"

[workspace.dependencies]
anyhow       = "1"
chrono       = { version = "0.4", features = ["serde"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
