[package]
name        = "budgeter-core"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true

[dependencies]
anyhow      = { workspace = true }
chrono      = { workspace = true }
encoding_rs = "0.8"
serde       = { workspace = true }
serde_json  = { workspace = true }
