[package]
name        = "budgeter-tui"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true

[[bin]]
name = "budgeter-tui"
path = "src/main.rs"

[dependencies]
budgeter-core = { path = "../budgeter-core" }
anyhow        = { workspace = true }
chrono        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
crossterm     = "0.28"
ratatui       = "0.30"
polars        = { version = "0.53", features = ["lazy", "parquet", "dtype-date", "dtype-datetime", "temporal", "serde"] }
